# offline

./: index.html  package.json  pnpm-lock.yaml  tailwind.config.js
src/: App.tsx  useOnlineStatus.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio_service.rs  main.rs
